--- a/views/admin/login.phtml
+++ b/views/admin/login.phtml
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Connexion</title>
+    <link rel="icon" href="/jean-forteroche/public/assets/img/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/jean-forteroche/public/assets/css/style.css">
 </head>
 <body>
-    
+    <div id="bg_login"></div>
+    <div class="content_login">
+        <img src="/jean-forteroche/public/assets/img/logo.svg" alt="">
+        <form action="">
+            <label for="username">Nom d'utilisateur</label><br>
+            <input type="text" name="username" id="username"><br>
+            <label for="password">Mot de passe</label><br>
+            <input type="password" name="password" id="password"><br>
+            <input type="checkbox" name="remember" id="remember"><label for="remember" id="cbox_rememmber">Se souvenir de moi</label> 
+            <input type="submit" value="connexion">
+        </form>
+    </div>
 </body>
 </html>
