--- a/views/layout/default.phtml
+++ b/views/layout/default.phtml
@@ -32,7 +32,7 @@
         <img src="/jean-forteroche/public/assets/img/logo_footer.png" alt="logo_footer">
         <ul>
             <li><span>Admin</span></li>
-            <li><a href="/jean-forteroche/admin">Se connecter</a></li>
+            <li><a href="/jean-forteroche/login">Se connecter</a></li>
         </ul>
         <ul>
             <li><span>Réseaux sociaux</span></li>
