--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -4,4 +4,8 @@
 @import 'lecture';
 @import '404';
 @import 'admin';
+@import 'admin_dashboard';
 @import 'admin_login';
+@import 'admin_roman';
+@import 'admin_chapitre';
+@import 'admin_add';
