--- a/views/elements/admin/login.phtml
+++ b/views/elements/admin/login.phtml
@@ -15,7 +15,7 @@
     <div id="bg_login"></div>
     <div class="content_login">
         <img src="/jean-forteroche/public/assets/img/logo.svg" alt="">
-        <form action="">
+        <form action="" method="post">
             <label for="username">Nom d'utilisateur</label><br>
             <input type="text" name="username" id="username"><br>
             <label for="password">Mot de passe</label><br>
