--- a/views/elements/chapitre.phtml
+++ b/views/elements/chapitre.phtml
@@ -12,7 +12,7 @@
             <?php foreach($chapitres as $chapitre): ?>
             <li>
                 <a href="/jean-forteroche/chapitres/lecture/<?= $chapitre['slug'] ?>">
-                    <img src="<?= $chapitre['src'] ?>" alt="">
+                    <img src="/jean-forteroche/public/assets/img/<?= $chapitre['src'] ?>" alt="">
                     <p id="date"><?= $chapitre['date_formater'] ?></p>
                     <h1>Chapitre <?= $chapitre['id'] ?></h1>
                     <p id="title"><?= $chapitre['title'] ?></p>
