--- a/views/layout/admin.phtml
+++ b/views/layout/admin.phtml
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="fr">
+<head>	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Dashboard</title>
+    <link rel="icon" href="/jean-forteroche/public/assets/img/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/jean-forteroche/public/assets/css/style.css">
 </head>
 <body>
-    <?= $content ?>
+    <div class="header_admin">
+        <a href="/jean-forteroche">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 491 567" id="logo_admin">
+                <path id="Forme_1" data-name="Forme 1" class="cls-1" d="M491,219l-64,76a10.647,10.647,0,0,0,1,13c-6.779,3.14-349,162-349,162l166,97L491,425V219Z"/>
+                <path id="Forme_2" data-name="Forme 2" class="cls-1" d="M62,461l11,6L284,257s31.476,20.6,53-5,8.806-49.466-2-58c-10.318-7.56-33.409-19.679-55,1-17.936,15.075-15.7,38.052-5,53C266.937,256.613,62,461,62,461Z"/>
+                <path id="Forme_3" data-name="Forme 3" class="cls-1" d="M59,459L0,425V141L245,0l69,40-75,64s-8.208,6.932-16,0C215.208,121.646,59,459,59,459Z"/>
+            </svg>
+        </a>
+        <div id="menu"><i class="fas fa-bars"></i></div>
+        <div id="notif"><i class="far fa-bell"><span class="badge_notif">2</span></i></div>
+        <div id="profil">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 491 567" id="azerty">
+            <path id="Forme_1" data-name="Forme 1" class="cls-1" d="M491,219l-64,76a10.647,10.647,0,0,0,1,13c-6.779,3.14-349,162-349,162l166,97L491,425V219Z"/>
+            <path id="Forme_2" data-name="Forme 2" class="cls-1" d="M62,461l11,6L284,257s31.476,20.6,53-5,8.806-49.466-2-58c-10.318-7.56-33.409-19.679-55,1-17.936,15.075-15.7,38.052-5,53C266.937,256.613,62,461,62,461Z"/>
+            <path id="Forme_3" data-name="Forme 3" class="cls-1" d="M59,459L0,425V141L245,0l69,40-75,64s-8.208,6.932-16,0C215.208,121.646,59,459,59,459Z"/>
+            </svg>
+        </div>
+        <div id="setting"><i class="fas fa-cog"></i></div>
+    </div>
+
+    <div class="sidebar">
+        <ul>
+            <a href="/jean-forteroche/dashboard"><li><i class="fas fa-tachometer-alt"></i></li></a>
+            <a href="/jean-forteroche/roman"><li><i class="fas fa-pen"></i></li></a>
+            <a href="#"><li><i class="fas fa-shopping-cart"></i></li></a>
+            <a href="/jean-forteroche/controllers/Logout.php"><li><i class="fas fa-wrench"></i></li></a>
+        </ul>
+    </div>
+
+    <main id="swup" class="transition-fade">
+        <?= $content ?>
+    </main>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
+    <script src="https://cdn.tiny.cloud/1/vk8w8ie7r4ria7p9xmbk51l6nlspxx9s5wqd7rhbwfdiv4f8/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="/jean-forteroche/public/assets/js/dist/SwupSlideTheme.js"></script>
+    <script src="https://kit.fontawesome.com/a5f0c7cf2a.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>  
+    <script src="/jean-forteroche/public/assets/js/adminApp.js"></script>
 </body>
 </html>
